--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-    <title>Vovon</title>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+      <title>Vovon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
